Se cambian los tipos de valores a ingresar en los layout

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -39,14 +39,14 @@
       <div class="titleLayout">
         <h1>Datos de cliente</h1>
       </div>
-      <input type="text" placeholder = "Numero de orden" >
-        <input type="text" placeholder = "Identificaion de cliente" >
+      <input type="number" placeholder = "Numero de orden" >
+        <input type="number" placeholder = "Identificaion de cliente" >
         <input type="text" placeholder = "Primer nombre de cliente" >
         <input type="text" placeholder = "Segundo nombre de cliente" >
         <input type="text" placeholder = "Primer apellido de cliente" >
         <input type="text" placeholder = "Segundo apellido de cliente" >
         <input type="text" placeholder = "Direccion de cliente" >
-        <input type="text" placeholder = "Fecha de registro" >
+        <input type="date" placeholder = "Fecha de registro" >
         <input type="text" placeholder = "Estado" >
         <input type="text" placeholder = "Direccion de entrga" >
         <input type="text" placeholder = "Prioridad" >          
@@ -55,12 +55,12 @@
        <div class="titleProduct">
         <h1>Datos de producto</h1>
       </div>
-        <input type="text" placeholder = "codigo del producto" >
+        <input type="number" placeholder = "codigo del producto" >
          <input type="text" placeholder = "Nombre del producto" >
-        <input type="text" placeholder = "Valor unitario del producto" >
-        <input type="text" placeholder = "Cantidad" >
-        <input type="text" placeholder = "valor parcial" >
-        <input type="text" placeholder = "valor total pedido" >
+        <input type="number" placeholder = "Valor unitario del producto" >
+        <input type="number" placeholder = "Cantidad" >
+        <input type="number" placeholder = "valor parcial" >
+        <input type="number" placeholder = "valor total pedido" >
     </div>
    
     <div class="Buttons">
